# src/main/kotlin/me/topilov/springplayground/auth/dto/ResendVerificationEmailRequest.kt
@@ -1,0 +1,12 @@
+package me.topilov.springplayground.auth.dto
+
+import jakarta.validation.constraints.Email
+import jakarta.validation.constraints.NotBlank
+import jakarta.validation.constraints.Size
+
+data class ResendVerificationEmailRequest(
+    @field:NotBlank
+    @field:Email
+    @field:Size(max = 255)
+    val email: String,
+)
