# src/main/kotlin/me/topilov/springplayground/auth/dto/ResendVerificationEmailResponse.kt
@@ -1,0 +1,5 @@
+package me.topilov.springplayground.auth.dto
+
+data class ResendVerificationEmailResponse(
+    val accepted: Boolean = true,
+)
