# src/main/kotlin/me/topilov/springplayground/auth/dto/VerifyEmailRequest.kt
@@ -1,0 +1,8 @@
+package me.topilov.springplayground.auth.dto
+
+import jakarta.validation.constraints.NotBlank
+
+data class VerifyEmailRequest(
+    @field:NotBlank
+    val token: String,
+)
